...
            selectedIcon: Icon(Icons.menu_book),
            label: 'Shelf',
          ),
          NavigationDestination(
            icon: Icon(Icons.style_outlined),
            selectedIcon: Icon(Icons.style),
            label: 'Table',
          ),
        ],
      ),
    );
  }
}
...
